--- a/macros.tex
+++ b/macros.tex
@@ -34,6 +34,7 @@
 
 \newcommand{\GoldbergTarjan}{\textsc{GoldbergTarjan}}
 \newcommand{\EdmondKarp}{\textsc{EdmondKarp}}
+\newcommand{\BoykovKolmogorov}{\textsc{BoykovKolmogorov}}
 
 %Benchmark Instances
 \newcommand{\ALL}{\textsc{All}}
