--- a/master_thesis/sections/introduction.tex
+++ b/master_thesis/sections/introduction.tex
@@ -136,7 +136,7 @@ of $3222$ benchmark instances. In comparison to the
 latest version of \emph{KaHyPar}, our new approach produces solutions that are
 $2\%$ better on average, while only incurring a slowdown by a factor of $2$.
 Moreover, our partitioner has a comparable running time to the direct $k$-way
-version of \emph{hMetis} and outperforms it on $82\%$ of the benchmark instances.
+version of \emph{hMetis} and outperforms it on $82\%$ of the benchmark instances
 
 \subsection{Outline}
 
